fixed contact-form extra paddings

--- a/css/contact-form.css
+++ b/css/contact-form.css
@@ -54,78 +54,76 @@
     border-color: #ffffff24;
     position: relative;
     }
-@media (max-width:320px){
-    #contact-form {
-        padding: 90px 0px 15px;
-    }
-    .contact-form_container-box__content{
-        padding: 0 15px;
-        font-weight: 400;
-    }
-    .-box__content--text .join{
-        font-size: 14px;
-        line-height: 19.6px;
-        text-align: left;
-        display: block;
-    }
-    .-box__content--text h3{
-        font-size: 28px;
-        line-height: 36.4px;
-    }
-    .-box__content--text p{
-        font-size: 14px;
-        line-height: 25.6px;
-        margin-block-start: 25px;
-        margin-top: 25px;
-        max-width: 100%;
-        position: relative;
-        text-align: left;
-        text-decoration-style: solid;
-    }
-    .contact-form_container--email_box{
-        padding: 0 15px;
-        width: 302px;
-        margin-top: 50px;
-        display: flex;
-        flex-direction: column;
-        font-family: Rubik, sans-serif;
-        line-height: 25.6px;
-    }
-    .contact-form_container--email_box input{
-        margin-top: 12px;
-        padding: 16px 25px;
-        width: 272px;
-        line-height: 18px;
-        font-weight: 400;
-        font-size: 15px;
-        border: 3px;
-    }
-    .submit {
-        background-position-x: 50%;
-        background-position-y: 50%;
-        align-items: flex-start;
-        margin-top: 24px;
-        padding: 16px 25px;
-        width: 272px;
-        font-size: 15px;
-        font-weight: bold;
-        height: 47px;
-        line-height: 15px;
-        border: 3px;
-    }
-    #contact-form_divider{
-        display: flex;
-        margin-top: 45px;
-        line-height: 25.6px;
-        width: 302px;
-        padding: 0 15px;
-    }
-    #contact-form_divider--component{
-        width: 272px;
-        padding: 0 15px;
-        justify-content: flex-start;
-        border: 1px ;
-    }
+#contact-form {
+    padding: 90px 0px 15px;
+}
+.contact-form_container-box__content{
+    padding: 0 15px;
+    font-weight: 400;
+}
+.-box__content--text .join{
+    display: block;
+    font-size: 14px;
+    line-height: 19.6px;
+    text-align: left;
+}
+.-box__content--text h3{
+    line-height: 36.4px;
+    font-size: 28px;
+}
+.-box__content--text p{
+    text-decoration-style: solid;
+    font-size: 14px;
+    line-height: 25.6px;
+    margin-block-start: 25px;
+    margin-top: 25px;
+    max-width: 100%;
+    position: relative;
+    text-align: left;
+}
+.contact-form_container--email_box{
+    line-height: 25.6px;
+    padding: 0 15px;
+    width: 302px;
+    margin-top: 50px;
+    display: flex;
+    flex-direction: column;
+    font-family: Rubik, sans-serif;
+}
+.contact-form_container--email_box input{
+    border: 3px;
+    margin-top: 12px;
+    padding: 16px 25px;
+    width: 272px;
+    line-height: 18px;
+    font-weight: 400;
+    font-size: 15px;
+}
+.submit {
+    background-position-y: 50%;
+    background-position-x: 50%;
+    margin-top: 24px;
+    align-items: flex-start;
+    width: 272px;
+    padding: 16px 25px;
+    font-weight: bold;
+    font-size: 15px;
+    line-height: 15px;
+    height: 47px;
+    border: 3px;
+}
+#contact-form_divider{
+    display: flex;
+    margin-top: 45px;
+    line-height: 25.6px;
+    width: 302px;
+    padding: 0 15px;
+}
+#contact-form_divider--component{
+    width: 272px;
+    padding: 0 15px;
+    justify-content: flex-start;
+    border: 1px ;
 }
 @media (min-width: 321px){
     #contact-form {
@@ -209,7 +207,6 @@
            padding: 0 32px;
        }
        .contact-form_container-box{
-        padding-top: 95px;
         display: flex;
        }
       .contact-form_container-box__content{
@@ -233,19 +230,15 @@
    .contact-form_container{
     padding: 0 40px;
 }
-   .contact-form_container-box{
-    padding-top: 100px;
-   }
-}
+
 @media (min-width: 1200px){
     #contact-form {
         padding: 110px 0px 15px;
     }
     .contact-form_container {
         margin: 0 191.5px;
-        padding: 60px 15px;
+        padding: 0 15px;
         max-width: 1200px;
-        /* width: 100%; */
     }
     .contact-form_container-box{
       display: flex;
